--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@next/font": "13.1.2",
+    "flickity": "^3.0.0",
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-flickity-component": "^4.0.0",
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.1"
   }
 }
